--- a/extra/linux/ST.desktop
+++ b/extra/linux/ST.desktop
@@ -4,15 +4,10 @@ TryExec=st
 Exec=st
 Icon=ST
 Terminal=false
-Categories=System:TerminalEmulator;
+Categories=System;TerminalEmulator;
 
 Name=Simple Terminal
 GenericName=Terminal
 Comment=Suckless terminal emulator for X
 Encoding=UTF-8
 Keywords=shell;prompt;command;commandline;cmd;
-Action=New;
-
-[Desktop Action New]
-Name=New Terminal
-Exec=st
